# afb-zephyr-samples

./: .gitignore  README.md
call-extern-api/: CMakeLists.txt  README.md  prj.conf
call-extern-api/src/: cert.der  cert.pem  key.der  key.pem  main.c  mkcert.sh
common/: dhcp.c
dual-local-api/: CMakeLists.txt  README.md  prj.conf
dual-local-api/src/: main.c
llext-module/: .gitignore  README.md  build-all.sh
llext-module/app/: CMakeLists.txt  prj.conf
llext-module/app/include/: app.h
llext-module/app/src/: main.c
llext-module/ext1/src/: main.c
llext-module/ext2/: CMakeLists.txt
llext-module/ext2/src/: main.c
llext-module/sdk/: CMakeLists.txt  prj.conf
remote-io-control/: CMakeLists.txt  README.md  prj.conf
remote-io-control/src/: dhcp.c  main.c
zephyr-afb-local/: CMakeLists.txt  prj.conf
zephyr-afb-local/src/: main.c  zafb-helpers.c  zafb-helpers.h
